[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/LevelSelectOverlay.gd" type="Script" id=1]
[ext_resource path="res://UI/Blur.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Fonts/font_title.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Fonts/font_tip.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/level_select.png" type="Texture" id=5]
[ext_resource path="res://Assets/circle.png" type="Texture" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="LevelSelectOverlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 2.0
margin_right = 9.0
margin_bottom = 2.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_vertical_guides_": [ 279.0, 1652.0 ]
}

[node name="Blur" parent="." instance=ExtResource( 2 )]
modulate = Color( 1, 1, 1, 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -680.0
margin_top = -338.0
margin_right = -274.0
margin_bottom = -274.0
custom_fonts/font = ExtResource( 3 )
text = "Select Level"

[node name="SolvedIndicators" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Level1" type="TextureRect" parent="SolvedIndicators"]
modulate = Color( 1, 1, 1, 0.0980392 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -573.0
margin_top = 63.0
margin_right = -518.0
margin_bottom = 118.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Level2" type="TextureRect" parent="SolvedIndicators"]
modulate = Color( 1, 1, 1, 0.0980392 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -449.0
margin_top = -174.0
margin_right = -394.0
margin_bottom = -119.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Level3" type="TextureRect" parent="SolvedIndicators"]
modulate = Color( 1, 1, 1, 0.0980392 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -327.0
margin_top = -59.0
margin_right = -272.0
margin_bottom = -4.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Level4" type="TextureRect" parent="SolvedIndicators"]
modulate = Color( 1, 1, 1, 0.0980392 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.0
margin_top = -169.0
margin_right = -88.0
margin_bottom = -114.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Level5" type="TextureRect" parent="SolvedIndicators"]
modulate = Color( 1, 1, 1, 0.0980392 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -127.0
margin_top = 189.0
margin_right = -72.0
margin_bottom = 244.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Level6" type="TextureRect" parent="SolvedIndicators"]
modulate = Color( 1, 1, 1, 0.0980392 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 51.0
margin_top = 70.0
margin_right = 106.0
margin_bottom = 125.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Level7" type="TextureRect" parent="SolvedIndicators"]
modulate = Color( 1, 1, 1, 0.0980392 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 152.0
margin_top = -44.0
margin_right = 207.0
margin_bottom = 11.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Level8" type="TextureRect" parent="SolvedIndicators"]
modulate = Color( 1, 1, 1, 0.0980392 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 331.0
margin_top = -7.0
margin_right = 386.0
margin_bottom = 48.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Level9" type="TextureRect" parent="SolvedIndicators"]
modulate = Color( 1, 1, 1, 0.0980392 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 517.0
margin_top = -81.0
margin_right = 572.0
margin_bottom = -26.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="BackButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -685.0
margin_top = 328.0
margin_right = -592.0
margin_bottom = 374.0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
text = "Back"
flat = true

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -574.0
margin_top = -175.0
margin_right = 574.0
margin_bottom = 291.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Button_Level1" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -580.0
margin_top = 56.0
margin_right = -510.0
margin_bottom = 126.0
rect_min_size = Vector2( 70, 70 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="Button_Level2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -456.0
margin_top = -181.0
margin_right = -386.0
margin_bottom = -111.0
rect_min_size = Vector2( 70, 70 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="Button_Level3" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -333.0
margin_top = -66.0
margin_right = -263.0
margin_bottom = 4.0
rect_min_size = Vector2( 70, 70 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="Button_Level4" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = -176.0
margin_right = -81.0
margin_bottom = -106.0
rect_min_size = Vector2( 70, 70 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="Button_Level5" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -133.0
margin_top = 180.0
margin_right = -63.0
margin_bottom = 250.0
rect_min_size = Vector2( 70, 70 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="Button_Level6" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 45.0
margin_top = 64.0
margin_right = 115.0
margin_bottom = 134.0
rect_min_size = Vector2( 70, 70 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="Button_Level7" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 146.0
margin_top = -52.0
margin_right = 216.0
margin_bottom = 18.0
rect_min_size = Vector2( 70, 70 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="Button_Level8" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 325.0
margin_top = -16.0
margin_right = 395.0
margin_bottom = 54.0
rect_min_size = Vector2( 70, 70 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="Button_Level9" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 510.0
margin_top = -90.0
margin_right = 580.0
margin_bottom = -20.0
rect_min_size = Vector2( 70, 70 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )
flat = true
__meta__ = {
"_edit_group_": true
}

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="Button_Level1" to="." method="_on_Button_Level1_pressed"]
[connection signal="pressed" from="Button_Level2" to="." method="_on_Button_Level2_pressed"]
[connection signal="pressed" from="Button_Level3" to="." method="_on_Button_Level3_pressed"]
[connection signal="pressed" from="Button_Level4" to="." method="_on_Button_Level4_pressed"]
[connection signal="pressed" from="Button_Level5" to="." method="_on_Button_Level5_pressed"]
[connection signal="pressed" from="Button_Level6" to="." method="_on_Button_Level6_pressed"]
[connection signal="pressed" from="Button_Level7" to="." method="_on_Button_Level7_pressed"]
[connection signal="pressed" from="Button_Level8" to="." method="_on_Button_Level8_pressed"]
[connection signal="pressed" from="Button_Level9" to="." method="_on_Button_Level9_pressed"]
